fix(ibp): 根据需求内容，修改IBP菜单界面扩充压力P1，P2显示名称

--- a/nPM/locale/locale.csv
+++ b/nPM/locale/locale.csv
@@ -83,14 +83,14 @@ RAP_MAP,RAP,RAP-MAP
 RAP_PR,RAP脉率,RAP-PR
 ICP_MAP,ICP,ICP-MAP
 ICP_PR,ICP脉率,ICP-PR
-AUXP1_SYS,AUXP1收缩压,AUXP1-SYS
-AUXP1_DIA,AUXP1舒张压,AUXP1-DIA
-AUXP1_MAP,AUXP1平均压,AUXP1-MAP
-AUXP1_PR,AUXP1脉率,AUXP1-PR
-AUXP2_SYS,AUXP2收缩压,AUXP2-SYS
-AUXP2_DIA,AUXP2舒张压,AUXP2-DIA
-AUXP2_MAP,AUXP2平均压,AUXP2-MAP
-AUXP2_PR,AUXP2脉率,AUXP2-PR
+AUXP1_SYS,P1收缩压,P1-SYS
+AUXP1_DIA,P1舒张压,P1-DIA
+AUXP1_MAP,P1平均压,P1-MAP
+AUXP1_PR,P1脉率,P1-PR
+AUXP2_SYS,P2收缩压,P2-SYS
+AUXP2_DIA,P2舒张压,P2-DIA
+AUXP2_MAP,P2平均压,P2-MAP
+AUXP2_PR,P2脉率,P2-PR
 CO_CO,心排量,C.O.
 CO_CI,心指数,C.I.
 TB,血温,TB
@@ -710,22 +710,22 @@ ICPMAPLow,ICP平均压低,ICP MAP Low
 ICPMAPHigh,ICP平均压高,ICP MAP High
 ICPPRLow,ICP脉率低,ICP PR Low
 ICPPRHigh,ICP脉率高,ICP PR High
-AUXP1SYSLow,AUXP1收缩压低,AUXP1 SYS Low
-AUXP1SYSHigh,AUXP1收缩压高,AUXP1 SYS High
-AUXP1DIALow,AUXP1收缩压低,AUXP1 DIA Low
-AUXP1DIAHigh,AUXP1舒张压高,AUXP1 DIA High
-AUXP1MAPLow,AUXP1平均压低,AUXP1 MAP Low
-AUXP1MAPHigh,AUXP1平均压高,AUXP1 MAP High
-AUXP1PRLow,AUXP1脉率低,AUXP1 PR Low
-AUXP1PRHigh,AUXP1脉率高,AUXP1 PR High
-AUXP2SYSLow,AUXP2收缩压低,AUXP2SYS Low
-AUXP2SYSHigh,AUXP2收缩压高,AUXP2 SYS High
-AUXP2DIALow,AUXP2收缩压低,AUXP2 DIA Low
-AUXP2DIAHigh,AUXP2舒张压高,AUXP2 DIA High
-AUXP2MAPLow,AUXP2平均压低,AUXP2 MAP Low
-AUXP2MAPHigh,AUXP2平均压高,AUXP2 MAP High
-AUXP2PRLow,AUXP2脉率低,AUXP2 PR Low
-AUXP2PRHigh,AUXP2脉率高,AUXP2 PR High
+AUXP1SYSLow,P1收缩压低,P1 SYS Low
+AUXP1SYSHigh,P1收缩压高,P1 SYS High
+AUXP1DIALow,P1收缩压低,P1 DIA Low
+AUXP1DIAHigh,P1舒张压高,P1 DIA High
+AUXP1MAPLow,P1平均压低,P1 MAP Low
+AUXP1MAPHigh,P1平均压高,P1 MAP High
+AUXP1PRLow,P1脉率低,P1 PR Low
+AUXP1PRHigh,P1脉率高,P1 PR High
+AUXP2SYSLow,P2收缩压低,P2SYS Low
+AUXP2SYSHigh,P2收缩压高,P2 SYS High
+AUXP2DIALow,P2收缩压低,P2 DIA Low
+AUXP2DIAHigh,P2舒张压高,P2 DIA High
+AUXP2MAPLow,P2平均压低,P2 MAP Low
+AUXP2MAPHigh,P2平均压高,P2 MAP High
+AUXP2PRLow,P2脉率低,P2 PR Low
+AUXP2PRHigh,P2脉率高,P2 PR High
 COCOLow,心排量低,CO Low
 COCOHigh,心排量高,CO High
 COCILow,心指数低,CI Low
