--- a/nPM/locale/locale.csv
+++ b/nPM/locale/locale.csv
@@ -282,7 +282,10 @@ ModuleNotConnected,模块未连接,Module Is Not Connected
 ReadyForNewMeasurement,可进行新测量,Ready For New Measurement
 InjectNow,立即注射,Inject Now
 PleaseWait,请等待...,Please Wait...
-MeasuementInProgress,正在测量...,Measurement In Progress...
+MeasurementInProgress,正在测量...,Measurement In Progress...
+MeasurementCancel,取消测量,Cancel Measurement
+MeasurementTimeout,测量超时,Measurement Timeout
+MeasurementFail,测量失败,Measurement Fail
 MeasureCompleted,测量完成,Measure Completed
 NoInjectateProbe,无注射探针,No Injectate Probe
 Save,保存,Save
