--- a/nPM/locale/locale.csv
+++ b/nPM/locale/locale.csv
@@ -307,7 +307,7 @@ RESPSetting,Resp设置,Resp Setting
 TEMPSetting,Temp设置,Temp Setting
 AGSetting,AG设置,AG Setting
 IBPSetting,IBP设置,IBP Setting
-COSetting,CO设置,CO Setting
+COSetting,C.O.设置,C.O. Setting
 SPO2Setting,SpO₂设置,SpO₂ Setting
 SPO2SeniorSetting,SpO₂高级参数设置,SpO₂ Senior Setting
 RRSource,RR来源,RR Source
