--- a/nPM/locale/locale.csv
+++ b/nPM/locale/locale.csv
@@ -354,7 +354,8 @@ percent,%,%
 gdL,g/dL,g/dL
 mmolL,mmol/L,mmol/L
 mLdL,mL/dL,mL/dL
-LMin,L/min,L/min
+lpm,L/min,L/min
+lpmpsqm,L/min/m²,L/min/m²
 Defaults,恢复默认值,Defaults
 SureAllAlarmDefaults,"所有报警设置将恢复默认值,您确定进行吗?",All alarm settings will reset to the defaults. Are you sure to continue?
 SureAllDataErase,"所有历史数据会被擦除,您确定进行吗?","All historical data will be erased,Are you sure to continue?"
