--- a/nPM/locale/locale.csv
+++ b/nPM/locale/locale.csv
@@ -1558,6 +1558,28 @@ SPO2OnlyMode,仅限SpO₂模式,SpO₂ only mode
 SPO22OnlyMode,仅限SpO₂ 2模式,SpO₂ 2 only mode
 SPO2BoardFailure,SpO₂板卡故障,SpO₂ Board Failure
 SPO22BoardFailure,SpO₂ 2板卡故障,SpO₂ 2 Board Failure
+SPO22LowSignalIQ,SpO₂ 2信号指示低,SpO₂ 2 Low Signal IQ
+SPO22LowPRConfidence,SpO₂ 2 PR可信度低,SpO₂ 2 Low PR Confidence
+SPO22LowPIConfidence,SpO₂ 2 PI可信度低,SpO₂ 2 Low PI Confidence
+SPO22InvalidSmoothPI,SpO₂ 2无效的平滑灌注指数,SpO₂ 2 Invalid Smooth PI
+SPO22LowSpMetConfidence,SpO₂ 2 SpMet可信度低,SpO₂ 2 Low SpMet Confidence
+SPO22LowSpMetPerfusionIndex,SpO₂ 2 SpMet灌注指数低,SpO₂ 2 Low SpMet PI
+SPO22LowSpHbConfidence,SpO₂ 2 SpHb可信度低,SpO₂ 2 Low SpHb Confidence
+SPO22LowSpHbPerfusionIndex,SpO₂ 2 SpHb灌注指数低,SpO₂ 2 Low SpHb PI
+SPO22LowSpOCConfidence,SpO₂ 2 SpOC可信度低,SpO₂ 2 Low SpOC Confidence
+SPO22LowSpOCPerfusionIndex,SpO₂ 2 SpOC灌注指数低,SpO₂ 2 Low SpOC PI
+SPO22LowPVIConfidence,SpO₂ 2 PVI可信度低,SpO₂ 2 Low PVI Confidence
+SPO2LowSignalIQ,SpO₂SpO₂信号指示低,SpO₂ Low Signal IQ
+SPO2LowPRConfidence,SpO₂ PR可信度低,SpO₂ Low PR Confidence
+SPO2LowPIConfidence,SpO₂ PI可信度低,SpO₂ Low PI Confidence
+SPO2InvalidSmoothPI,SpO₂ 无效的平滑灌注指数,SpO₂ Invalid Smooth PI
+SPO2LowSpMetConfidence,SpO₂ SpMet可信度低,SpO₂ Low SpMet Confidence
+SPO2LowSpMetPerfusionIndex,SpO₂ SpMet灌注指数低,SpO₂ Low SpMet PI
+SPO2LowSpHbConfidence,SpO₂ SpHb可信度低,SpO₂ Low SpHb Confidence
+SPO2LowSpHbPerfusionIndex,SpO₂ SpHb灌注指数低,SpO₂ Low SpHb PI
+SPO2LowSpOCConfidence,SpO₂ SpOC可信度低,SpO₂ Low SpOC Confidence
+SPO2LowSpOCPerfusionIndex,SpO₂ SpOC灌注指数低,SpO₂ Low SpOC PI
+SPO2LowPVIConfidence,SpO₂ PVI可信度低,SpO₂ Low PVI Confidence
 SPO2Program,SpO₂ 编程,SpO₂ Program 
 RequestEnterProgramMode,请求进入编程模式,Request Enter Program Mode
 Programming,正在编程,Programming
