--- a/nPM/locale/locale.csv
+++ b/nPM/locale/locale.csv
@@ -1569,7 +1569,7 @@ SPO22LowSpHbPerfusionIndex,SpO₂ 2 SpHb灌注指数低,SpO₂ 2 Low SpHb PI
 SPO22LowSpOCConfidence,SpO₂ 2 SpOC可信度低,SpO₂ 2 Low SpOC Confidence
 SPO22LowSpOCPerfusionIndex,SpO₂ 2 SpOC灌注指数低,SpO₂ 2 Low SpOC PI
 SPO22LowPVIConfidence,SpO₂ 2 PVI可信度低,SpO₂ 2 Low PVI Confidence
-SPO2LowSignalIQ,SpO₂SpO₂信号指示低,SpO₂ Low Signal IQ
+SPO2LowSignalIQ,SpO₂信号指示低,SpO₂ Low Signal IQ
 SPO2LowPRConfidence,SpO₂ PR可信度低,SpO₂ Low PR Confidence
 SPO2LowPIConfidence,SpO₂ PI可信度低,SpO₂ Low PI Confidence
 SPO2InvalidSmoothPI,SpO₂ 无效的平滑灌注指数,SpO₂ Invalid Smooth PI
