--- a/nPM/locale/locale.csv
+++ b/nPM/locale/locale.csv
@@ -629,6 +629,8 @@ SPCOLow,SpCO低,SpCO Low
 SPCOHigh,SpCO高,SpCO High
 SPO2PRLow,PR低,PR Low
 SPO2PRHigh,PR高,PR High
+PluginPRLow,PR 2 低,PR 2 Low
+PluginPRHigh,PR 2 高,PR 2 High
 SPO2Initializing,SpO₂初始化,SpO₂ initializing
 SPO2PulseSearch,SpO₂搜索脉搏,SpO₂ Pulse Search
 SPO2PulseSearchTooLong,SpO₂脉搏搜索时间过长,SpO₂ Pulse Search Too Long
