--- a/nPM/locale/locale.csv
+++ b/nPM/locale/locale.csv
@@ -304,8 +304,8 @@ ConfigEditTEMPMenuDesc,Temp,Temp
 TEMPMenuContent,Temp,Temp
 TEMPMenuContentDesc,Temp,Temp
 TEMPUnit,单位,Unit
-TEMP1Low,Temp1低,Temp1 Low
-TEMP1High,Temp1高,Temp1 High
+TEMP1Low,T1低,Temp1 Low
+TEMP1High,T1高,Temp1 High
 MeasureSettingMenu,测量设置,Measure Setting
 MeasureSettingMenuDesc,测量设置,Measure Setting
 ECGSetting,ECG设置,ECG Setting
@@ -337,18 +337,18 @@ WiFiProfile,WiFi配置,WiFi Profile
 Standy,待机,Standy
 CalculateWindow,计算,Calculate Window
 PressAnyKeysToExit,请按压任何按键退出待机模式,Press Any Keys To Exit
-TEMP2Low,Temp2低,Temp2 Low
-TEMP2High,Temp2高,Temp2 High
-TEMPTDLow,Temp差低,ΔT Low
-TEMPTDHigh,Temp差高,ΔT High
-TEMP1SensorOff,Temp1探头脱落,Temp1 Sensor Off
+TEMP2Low,T2低,Temp2 Low
+TEMP2High,T2高,Temp2 High
+TEMPTDLow,ΔT低,ΔT Low
+TEMPTDHigh,ΔT高,ΔT High
+TEMP1SensorOff,Temp探头脱落1,Temp1 Sensor Off
 PrintSettingMenu,打印设置,Print Setting
 PrintSettingMenuDesc,打印设置,Print Setting
 Continous,连续,Continous
-TEMP2SensorOff,Temp2探头脱落,Temp2 Sensor Off
+TEMP2SensorOff,Temp探头脱落2,Temp2 Sensor Off
 TEMPSensorOffAll,Temp探头全部脱落,All Temp Sensor Off
-TEMP1OverRange,Temp1超界,Temp1 Out of Range
-TEMP2OverRange,Temp2超界,Temp2 Out of Range
+TEMP1OverRange,Temp超界1,Temp1 Out of Range
+TEMP2OverRange,Temp超界2,Temp2 Out of Range
 TEMPOverRangeAll,Temp全部超界,All Temp Out of Range
 TEMP1ProbeTypeError,Temp1探头类型错误,Temp1 Probe Type Error
 TEMP2ProbeTypeError,Temp2探头类型错误,Temp2 Probe Type Error
@@ -394,7 +394,7 @@ TEMPMenuDesc,Temp,Temp
 AGMenuDesc,AG,AG
 SystemInfoSetting,系统信息,System Info
 ErrorLog,错误日志,Error Log
-SomeLimitAlarmDisabled,有超限报警被关闭,Some Limit Alarms Disabled
+SomeLimitAlarmDisabled,一些报警被关闭,Some Limit Alarms Disabled
 PowerupCommunicationStop,前面板通信中断,System Board Communication Stop
 WiFiMenu,无线网络,Wifi
 WiFiMenuDesc,无线网络,Wifi
@@ -545,8 +545,8 @@ AlarmPriority,优先级,Priority
 High,高,High
 Medium,中,Med
 Low,低,Low
-HRHigh,HR高,HR High
-HRLow,HR低,HR Low
+HRHigh,心率高,HR High
+HRLow,心率低,HR Low
 PVCSLow,PVCS 低,PVCS Low
 PVCSHigh,PVCS 高,PVCS High
 ST-Low,ST-I 低,ST-I Low
@@ -611,8 +611,8 @@ ECGSendCommunicationStop,ECG发送通信中断,ECG Send Communication Stop
 RESPCommunicationStop,Resp通信中断,Resp Communication Stop
 RESPCheckElecrodes,Resp检查电极,Resp Check Electrodes
 Apnea,呼吸窒息,Apnea
-SPO2Low,SpO₂低,SpO₂ Low
-SPO2High,SpO₂高,SpO₂ High
+SPO2Low,血氧低,SpO₂ Low
+SPO2High,血氧高,SpO₂ High
 SPO22Low,SpO₂ 2 低,SpO₂ 2 Low
 SPO22High,SpO₂ 2 高,SpO₂ 2 High
 SPO2DLow,ΔSpO₂低,ΔSpO₂ Low
@@ -627,18 +627,18 @@ SPMETLow,SpMet低,SpMet Low
 SPMETHigh,SpMet高,SpMet High
 SPCOLow,SpCO低,SpCO Low
 SPCOHigh,SpCO高,SpCO High
-SPO2PRLow,PR低,PR Low
-SPO2PRHigh,PR高,PR High
+SPO2PRLow,PR过低,PR Low
+SPO2PRHigh,PR过高,PR High
 PluginPRLow,PR 2 低,PR 2 Low
 PluginPRHigh,PR 2 高,PR 2 High
 SPO2Initializing,SpO₂初始化,SpO₂ initializing
 SPO2PulseSearch,SpO₂搜索脉搏,SpO₂ Pulse Search
-SPO2PulseSearchTooLong,SpO₂脉搏搜索时间过长,SpO₂ Pulse Search Too Long
+SPO2PulseSearchTooLong,SpO₂搜索脉搏过长,SpO₂ Pulse Search Too Long
 SPO2SensorOff,SpO₂传感器脱落,SpO₂ Sensor Off
 SpO2Sensor,SpO₂传感器,SpO₂ Sensor
 SPO2CheckSensor,SpO₂检查探头,SpO₂ Check Sensor
 SPO22CheckSensor,SpO₂ 2检查探头,SpO₂ 2 Check Sensor
-SPO2SearchPulseTooLong,SpO₂脉搏搜索时间过长,SpO₂ Search Pulse Too Long
+SPO2SearchPulseTooLong,SpO₂搜索脉搏过长,SpO₂ Search Pulse Too Long
 SPO2SearchingPulse,SpO₂脉搏搜索,SpO₂ Searching Pulse
 SPO2CommunicationStop,SpO₂通信中断,SpO₂ Communication Stop
 SPO22CommunicationStop,SpO₂ 2通信中断,SpO₂ 2 Communication Stop
@@ -657,19 +657,19 @@ CO2BRHigh,BR 高,BR High
 CO2MotorError,CO₂电机转速超限,CO₂ Motor Speed Out of bounds
 CO2SoftwareError,CO₂软件错误,CO₂ Software Error
 CO2HardwareError,CO₂硬件错误,CO₂ Hardware Error
-CO2MissFactoryCali,CO₂未校准,CO₂ Miss Factory Calib
+CO2MissFactoryCali,CO₂出厂未校准,CO₂ Miss Factory Calib
 CO2ReplaceAdapter,CO₂更换适配器,CO₂ Replace Adapter
-CO2NoAdapter,CO₂无适配器,CO₂ No Adapter
+CO2NoAdapter,CO₂没适配器,CO₂ No Adapter
 CO2OutRange,CO₂超出精度范围,CO₂ Out of Accuracy Range
-CO2TempOutRange,CO₂内部温度超界,CO₂ Temp Out of Range
+CO2TempOutRange,CO₂温度超界,CO₂ Temp Out of Range
 CO2BaroPressOutRange,CO₂大气压力超限,CO₂ Baro Pressure Out of Range
 CO2ZeroRequired,CO₂需要校零,CO₂ Zero Required
 CO2ZeroDisable,CO₂禁止校零,CO₂ Zero Disable
-CO2ZeroInprogress,CO₂校零中,CO₂ Zero In Progress
+CO2ZeroInprogress,CO₂正在校零,CO₂ Zero In Progress
 CO2SpanCalibFailed,CO₂校准失败,CO₂ Span Calib Failed
 CO2SpanCalibInprogress,CO₂正在校准,CO₂ Span Calib In Progress
 CO2ZeroAndSpanDisable,CO₂禁止校零和校准,CO₂ Zero and Span Disable
-CO2SamplingLineClogged,"CO₂ 流速低,采样管堵塞","CO₂ Low Flow Rate, Sample Line Clogged"
+CO2SamplingLineClogged,CO₂采样管堵塞,"CO₂ Low Flow Rate, Sample Line Clogged"
 CO2NoSampleLine,CO₂没有采样线,CO₂ No Sample Line
 CO2CalibratePotency,校准浓度,Calibration Denstiy
 CO2CommunicationStop,CO₂通讯停止,CO₂ Communication Stop
@@ -760,20 +760,20 @@ NIBPMAPLow,平均压低,NIBP MAP Low
 NIBPMAPHigh,平均压高,NIBP MAP High
 NIBPCommunicationStop,NIBP通信中断,NIBP Communication Stop
 NIBPDataTransmissionStop,NIBP发送通信中断,NIBP Data Transmission Stop
-NIBPSelftestFailed,NIBP自测失败,NIBP Selftest Failed
+NIBPSelftestFailed,NIBP自检失败,NIBP Selftest Failed
 NIBPModuleAbnormal,NIBP模块异常,NIBP Module Abnormal
 NIBPModuleNotCalibrate,NIBP未校准,NIBP Module Not Calibrated
 NIBPModuleError,NIBP模块硬件错误,NIBP Module Hardware Error
 NIBPModuleOverPressure,NIBP模块过压,NIBP Module Overpressure
 NIBPCommunicationTimeout,NIBP通信超时,NIBP Communication Timeout
-NIBPMeasurementAbort,测量中止,NIBP Measurement Aborted
-NIBPCuffTypeError,NIBP袖带类型错,NIBP Cuff Type Error 
+NIBPMeasurementAbort,NIBP测量中断,NIBP Measurement Aborted
+NIBPCuffTypeError,NIBP袖带类型错误,NIBP Cuff Type Error 
 NIBPCuffError,NIBP袖带错误,NIBP Cuff Error
 NIBPCuffAirLeakage,NIBP袖带漏气,NIBP Cuff Air Leakage
 NIBPPneumaticBlockage,NIBP气管堵塞,NIBP Pneumatic Blockage
-NIBPCuffOverPressure,NIBP袖带压力过压,NIBP Cuff Over Pressure
-NIBPPressureError,NIBP压力错,NIBP Pressure Error
-NIBPSignalWeak,NIBP信号微弱,NIBP Signal Weak
+NIBPCuffOverPressure,NIBP袖带过压,NIBP Cuff Over Pressure
+NIBPPressureError,NIBP压力错误,NIBP Pressure Error
+NIBPSignalWeak,NIBP信号弱,NIBP Signal Weak
 NIBPSignalSaturation,NIBP信号饱和,NIBP Signal Saturation
 NIBPMeasureOverRange,NIBP测量超界,Measure Over Range
 NIBPMeasureTimeout,NIBP测量超时,NIBP Measure Timeout
@@ -1024,7 +1024,7 @@ PrinterDataTransmissionStop,打印机发送通信中断,Printer Data Transmissio
 PrinterDoorOpened,打印机仓门未关,Printer Door Opened
 PrinterOutOfPaper,打印机缺纸,Printer Out Of Paper
 PrinterOverHeating,打印头过热,Printer Over Heating
-PrinterFault,打印机故障,Printer Fault
+PrinterFault,打印机错误,Printer Fault
 ReplaceBattery,替换电池,Replace Battery
 BatteryDisconnected,电池未连接,Battery Disconnected
 BatteryError,电池错误,Battery Error
@@ -1500,7 +1500,7 @@ Machine.xml,机器配置,Machine Config.
 SaveCurrentSetting,保存设置,Save Current Setting
 SaveCurrentSettingAs,保存设置,Save Setting
 SaveCurrentSettingAsDesc,保存设置,Save Setting
-reachedTheMaximunOfConfigurations,用户配置已满，继续保存之前请删除已有的用户配置,The maximum of user configurations is reached.Please delete existing user configurations first.
+reachedTheMaximunOfConfigurations,"用户配置已满，继续保存之前请删除已有的用户配置",The maximum of user configurations is reached.Please delete existing user configurations first.
 SaveAsUserConfig,用户配置保存,Save As User Config
 SaveTheCurrentSetting,保存当前监护仪的设置为用户配置,Save the current settings as user configuration.
 NameTheConfigurationName,您的配置命名为,Please name the configuration.
@@ -1518,8 +1518,8 @@ SPO2FingerOff,SpO₂ 未检测到手指,SpO₂ Finger Off
 SPO22FingerOff,SpO₂ 2 未检测到手指,SpO₂ 2 Finger Off
 SPO2LEDFault,SpO₂调光错误,SpO₂ LED Fault
 SPO22LEDFault,SpO₂ 2调光错误,SpO₂ 2 LED Fault
-SPO2LowPerfusion,SpO₂弱灌注,SpO₂ Low Perfusion
-SPO22LowPerfusion,SpO₂ 2弱灌注,SpO₂ 2 Low Perfusion
+SPO2LowPerfusion,SpO₂低灌注,SpO₂ Low Perfusion
+SPO22LowPerfusion,SpO₂ 2低灌注,SpO₂ 2 Low Perfusion
 SPO2DefectiveCable,SpO₂线缆故障,SpO₂ Defective cable
 SPO22DefectiveCable,SpO₂ 2线缆故障,SpO₂ 2 Defective cable
 SPO2CableExpired,SpO₂线缆过期,SpO₂ Cable expired
@@ -1550,8 +1550,8 @@ SPO2IncompatibleAdhesiveSensor,SpO₂不兼容的粘性传感器,SpO₂ Incompat
 SPO22IncompatibleAdhesiveSensor,SpO₂ 2不兼容的粘性传感器,SpO₂ 2 Incompatible adhesive sensor
 SPO2UnrecognizedAdhesiveSensor,SpO₂未识别的粘性传感器,SpO₂ Unrecognized adhesive sensor
 SPO22UnrecognizedAdhesiveSensor,SpO₂ 2未识别的粘性传感器,SpO₂ 2 Unrecognized adhesive sensor
-SPO2DefectiveAdhesiveSensor,SpO₂粘性传感器故障,SpO₂ Defective adhesive sensor
-SPO22DefectiveAdhesiveSensor,SpO₂ 2粘性传感器故障,SpO₂ 2 Defective adhesive sensor
+SPO2DefectiveAdhesiveSensor,SpO₂有缺陷的粘性传感器,SpO₂ Defective adhesive sensor
+SPO22DefectiveAdhesiveSensor,SpO₂ 2有缺陷的粘性传感器,SpO₂ 2 Defective adhesive sensor
 SPO2SensorIniting,SpO₂传感器初始化,SpO₂ Sensor initing
 SPO22SensorIniting,SpO₂ 2传感器初始化,SpO₂ 2 Sensor initing
 SPO2InterferenceDetected,SpO₂检测到干扰,SpO₂ Interference detected
@@ -1603,7 +1603,7 @@ InvalidToolConfiguration,工具配置无效,Invalid Tool Configuration
 NIBPSimul,NIBP同侧,NIBP Simul
 Input8DigitsPassword,请输入8位数字密码,Please input 8 digits password
 BornDate,出生日期,Born Date
-CurrentPatientStorageSpaceFull,当前监护数据存储空间满,Current monitoring data storage space full
+CurrentPatientStorageSpaceFull,储存空间已满,Current monitoring data storage space full
 ChangePatientType,更改病人类型会导致配置更改，您确认要这么做吗？,Changing patient type will cause the configuration changes，Are you sure?
 shutDownIn2Min,电量严重不足，将在两分钟后关机，请连接电源,Serious shortage of electricity.System will shutdown in two minutes.Please connect the power supply.
 handMeasure,手部测量,Hand Measure
