feat(co2 param): 根据DAVID说明书要求，增加awRR报警配置，并增加awRR参数ID，用于处理awRR参数报警
#3360, #3360

--- a/nPM/locale/locale.csv
+++ b/nPM/locale/locale.csv
@@ -57,6 +57,7 @@ Input,输入,Input
 Output,输出,Output
 ReviewWindow,回顾窗口,Review Window
 CO2,CO₂,CO₂
+AWRR,awRR,awRR
 ETCO2,EtCO₂,EtCO₂
 FICO2,FiCO₂,FiCO₂
 ETN2O,EtN₂O,EtN₂O
