feat(locale): 根据DAVID说明书要求，修改“恢复默认”菜单项描述
#3360,#3363

--- a/nPM/locale/locale.csv
+++ b/nPM/locale/locale.csv
@@ -1256,7 +1256,7 @@ Tbrain,大脑,T brain
 H2min,2分钟,2min
 H3min,3分钟,3min
 Defaults,默认,Defaults
-RestoreDefaults,恢复默认,Restore Defaults
+RestoreDefaults,默认覆盖,Restore Defaults
 ModuleMaintainMenu,模块维护,Module Maintain
 ModuleMaintainMenuDesc,模块维护,Module Maintain
 AnaesthesiaModuleCalibration,麻醉模块化校准,Anaesthesia Module Calibration
