feat(ecg menu): 在工厂维护模式增加配置：支持关闭陷波滤波器设置项，用于配置监护、手术模式是否可关闭陷波滤波器

--- a/nPM/locale/locale.csv
+++ b/nPM/locale/locale.csv
@@ -1655,3 +1655,4 @@ LowConfigure,低配,Low Configuration
 HighConfigure,高配,High Configuration
 SystemBoardSendCommunicationStop,系统板发送通讯中断,System Board Send Communicaiton Stop
 NetworkDebug,网络调试,Network Debug
+TurnOffNotchFilter,支持关闭陷波滤波器,Support notch filter off
