fix(cchd): "hand measure, foot measure" instead of "spo2value, spo21value";support single-spo2 cchd

--- a/nPM/locale/locale.csv
+++ b/nPM/locale/locale.csv
@@ -1613,8 +1613,8 @@ shutDownIn2Min,电量严重不足，将在两分钟后关机，请连接电源,S
 handMeasure,手部测量,Hand Measure
 footMeasure,足部测量,Foot Measure
 CCHDCheck,CCHD筛查,CCHD Check
-SpO2Value,SpO₂数据,SpO₂ Value
-SpO2_2Value,SpO₂ 2数据,SpO₂ 2 Value
+SpO2Value,手部测量,Hand Measure
+SpO2_2Value,足部测量,Foot Measure
 Negative,阴性,Negative
 Positive,阳性,Positive
 Result,结果,Result
