--- a/nPM/locale/locale.csv
+++ b/nPM/locale/locale.csv
@@ -1361,6 +1361,7 @@ CVPUnit,中心静脉压单位,CVP Unit
 ICPUnit,颅内压单位,ICP Unit
 CO2Unit,CO₂单位,CO₂ Unit
 ApneaDelay,窒息延迟,Apnea Delay
+ApneaAlarm,窒息报警,Apnea Alarm
 BreathLead,呼吸导联,Breath Lead
 SweepSpeed,波形速度,Sweep Speed
 RespMenu,Resp,Resp Menu
